argocd/auh/ns.yml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: accounts 
#   annotations:
#     argocd.argoproj.io/sync-wave: "0"
#   labels:
#     istio-injection: enabled    

# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: transfers 
#   annotations:
#     argocd.argoproj.io/sync-wave: "0"
#   labels:
#     istio-injection: enabled        

---
apiVersion: v1
kind: Namespace
metadata:
  name: limits 
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    istio-injection: enabled      

---
apiVersion: v1
kind: Namespace
metadata:
  name: vm 
  annotations:
    argocd.argoproj.io/sync-wave: "0"  
  labels:
    istio-injection: enabled
