argocd/auh/pa-ewgateway.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: gateway-mtls
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: eastwestgateway
  mtls:
    mode: STRICT
