argocd/auh/pa-permissive.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: permissive-mode
  namespace: payments  # Replace with your namespace
spec:
  mtls:
    mode: PERMISSIVE
