argocd/auh/strict-pa.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mode
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
