argocd/auh/v2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-vmi-svc
  namespace: vm
spec:
  selector:
    app: istio-vmi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
