argocd/auh/vm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cirros-vmi-svc
  namespace: default
spec:
  selector:
    app: cirros-vmi
  ports:
  - port: 8080
    protocol: TCP
