argocd/auh/vm-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vmsvc
  namespace: vm
spec:
  selector:
    kubevirt.io/domain: testvm2
  ports:
    - protocol: TCP
      port: 8080
