argocd/auh/vmi-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: testvmi
  namespace: vm
spec:
  selector:
    app: testvmi
  ports:
    - protocol: TCP
      port: 8080        
      targetPort: 8080
