argocd/auh/ing-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: ISTIO_MUTUAL
