argocd/auh/vm-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: testvm-vs
  namespace: payment
spec:
  hosts:
    - '*'
  gateways:
    - istio-system/mesh
  http:
    - match:
        - uri:
            prefix: /payments
      route:
        - destination:
            host: testvm-service.payment.svc.cluster.local 
            port:
              number: 8080
