argocd/auh/vmi-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: testvmi
  namespace: vm
spec:
  hosts:
    - '*'
  gateways:
    - istio-system/ingress
  http:
    - match:
        - uri:
            prefix: /payments
      rewrite:
        uri: "/"
      route:
        - destination:
            host: testvmi.vm.svc.cluster.local
            port:
              number: 8080
