argocd/auh/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: accounts
  name: accounts
  namespace: accounts
spec:
  hosts:
    - testvm-service.payment.svc.cluster.local 
  gateways:
    - istio-system/mesh
  http:
    - match:
        - uri:
            prefix: /payments
      route:
        - destination:
            host: testvm-service.payment.svc.cluster.local 
            port:
              number: 8080
